# UniversityHomework

./: .gitignore  LICENSE  README.md
B1S1 - Introduction to Computer Science/: BinarySearch.cs
B2S1 - Lab of Data Structures/: 1000.c  1001.c  1002.c  1003.c  1004.c  1005.c  1006.c  1007.c  1008.c  1009.c  1010.c  1011.c  1012.c  1013.c  1014.c  1016.c  1017.c  1018.c  1019.c  1020.c  1021.c  1022.c  1023.c  1024.c  1026.c  1032.c  1033.c  1034.c  1035.c  1037.c  1038.c  1039.c  1040.c  1041.c  1048.c  1051.c  1052.c  1055.c  1056.c  1058.c  (+7 more)
B2S2 - Digital Systems Laboratory/: week11.v  week12.v  week13.v  week14.v  week15.v  week16.v  week17.v
B2S2 - Lab of Algorithm Design/: 1010_A.c  1011_B.c  1012_C.c  1013_D.c  1014_E.c  1015_F.c  1016_G.c  1017_H.c  1018_I.c  1019_J.c  1020_K.c  1021_L.c  1022_M.cpp  1025_P.cpp  1026_Q.cpp  1027_R.cpp  1028_h.cpp  1029_i.cpp  1034_W.cpp  1035_X.cpp  1036_Y.cpp  1037_Z.cpp  1038_a.cpp  1039_b.cpp  1040_c.cpp  1041_d.cpp  1042_e.cpp  1043_f.cpp  1044_g.cpp  CMakeLists.txt  share.c
B3S1 - Introduction to Virtual Reality/: Practice 1.skp  Practice 2.skp  Practice 3.skp  Project 2.skp  Project 5.unitypackage
B4S1 - Computer Vision/: Final Exam - 1.py  Final Exam - 2.py  Final Exam - 3.py  Homework 01.py  Homework 02.py  Homework 03.py  Midterm Exam.py  Practice 03.py  Practice 04.py  Practice 05.py  Practice 06.py  Practice 07.py  Practice 08.py  Practice 09.py  Practice 10.py  Practice 11.py  Practice 12.py
B4S2 - Blockchain Principle and Application/: Vote.sol
B4S2 - Digital Learning Technology/: Week 02.py  Week 03.py  (+3 more)
(+386 files in other folders)
